static/scss/rsvp.scss
@import 'utils/vars';

.rsvp {

  height: 50vh;
  display: grid;
  place-items: center;

}

.paragraph-text {
  font-size: 7vw;
  opacity: .7;
  transform: translateY(5%);
  font-family: Canela;
  font-style: italic;
  color: transparent;
  -webkit-text-stroke-color: #29363C;
  -webkit-text-stroke-width: 1px;

  margin-top: -170px;

  @media (max-width: map-get($breakpoints, breakpoint-tablet)) {
    margin-top: -100px;
  }

  .rsvp--subtext {
    color:  map-get(map-get($palettes, darkblue), base);
    -webkit-text-stroke-width: 0px;
    background-color: #6fc56d;
  }
}

